# src/index.js
@@ -14,6 +14,7 @@ const tripRoute = require('./routes/trip.route')
 const bookingRoute = require('./routes/booking.route')
 const authRoutes = require('./routes/auth.route')
 const adminRoutes = require('./routes/admin.route')
+const contactRoutes = require('./routes/contact.routes');
 
 
 app.use('/images', express.static(path.join(__dirname, '../images')));
@@ -25,11 +26,12 @@ app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 app.use('/auth', authRoutes);
 app.use('/admin', adminRoutes);
-app.use("/guides", guideRoute);
-app.use("/tourists", touristRoute);
-app.use("/provinces", provinceRoute);
-app.use("/trips", tripRoute);
-app.use('/bookings', bookingRoute)
+app.use('/guides', guideRoute);
+app.use('/tourists', touristRoute);
+app.use('/provinces', provinceRoute);
+app.use('/trips', tripRoute);
+app.use('/bookings', bookingRoute);
+app.use('/contact', contactRoutes);
 
 app.get('/', (req, res) => {
   res.json({
